<resources>
    <string name="app_name">TelegramCopy</string>
    <string name="chats_fragment">Чаты</string>
    <string name="settings_fragment">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_settings_default_username">Shenfeld Daniil</string>
    <string name="text_settings_default_status_online">В сети</string>
    <string name="text_settings_account">Аккаунт</string>
    <string name="text_default_number">+7-(961)-534-50-54</string>
    <string name="text_settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="text_default_username">shenfeld</string>
    <string name="text_label_username">Имя пользователя</string>
    <string name="text_label_settings_bio">Напишите немного о себе</string>
    <string name="text_settings_bio">О себе</string>
    <string name="text_settings_menu_change_name">Изменить имя</string>
    <string name="text_settings_menu_exit">Выход</string>
    <string name="description_enter_image">enter_image</string>
    <string name="text_enter_code">Введите код</string>
    <string name="text_enter_code_subtext">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="text_enter_code_default">- - - - - -</string>
    <string name="register_title_phone">Ваш телефон</string>
    <string name="register_toast_empty_phone">Введите номер телефона</string>
    <string name="register_phone_hint">Введите номер телефона</string>
    <string name="settings_name_hint">Имя</string>
    <string name="settings_surname_hint">Фамилия</string>
    <string name="settings_toast_name">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_input_username_hint">Username</string>
    <string name="settings_bio_hint">О себе</string>
</resources>