<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/enter_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:contentDescription="@string/description_enter_image"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_enter_code"
        style="@style/normalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/text_enter_code"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_image" />

    <TextView
        android:id="@+id/tv_enter_code_subtext"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/text_enter_code_subtext"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_code" />

    <EditText
        android:id="@+id/et_enter_code"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/text_enter_code_default"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_code_subtext"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>