<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_cl_height_100"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_settings"
            android:layout_width="@dimen/normal_icon_size"
            android:layout_height="@dimen/normal_icon_size"
            android:layout_marginStart="@dimen/normal_margin"
            android:src="@drawable/default_photo"
            app:civ_circle_background_color="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_settings_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/text_settings_default_username"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/civ_settings"
            app:layout_constraintTop_toTopOf="@id/civ_settings" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/text_settings_default_status_online"
            android:textColor="@color/colorSubtext"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/civ_settings"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_full_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:text="@string/text_settings_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_settings_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_change_number_phone"
        style="@style/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_text_account">

        <TextView
            android:id="@+id/tv_settings_phone_number"
            style="@style/normalText"
            android:text="@string/text_default_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_settings_change_number_phone" />

        <TextView
            android:id="@+id/tv_settings_label_phone_number"
            style="@style/smallText"
            android:text="@string/text_settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_phone_number" />

        <View
            style="@style/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_label_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_change_username"
        style="@style/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_settings_change_number_phone">

        <TextView
            android:id="@+id/tv_settings_change_username"
            style="@style/normalText"
            android:text="@string/text_default_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_settings_change_username" />

        <TextView
            android:id="@+id/tv_settings_label_username"
            style="@style/smallText"
            android:text="@string/text_label_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_change_username" />

        <View
            style="@style/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_label_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_change_bio"
        style="@style/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_settings_change_username">

        <TextView
            android:id="@+id/tv_settings_change_bio"
            style="@style/normalText"
            android:text="@string/text_settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_settings_change_bio" />

        <TextView
            android:id="@+id/tv_settings_label_bio"
            style="@style/smallText"
            android:text="@string/text_label_settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_change_bio" />

        <View
            style="@style/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_label_bio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_settings_change_photo"
        android:layout_width="@dimen/normal_icon_size"
        android:layout_height="@dimen/normal_icon_size"
        android:layout_marginEnd="@dimen/normal_margin"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@color/colorGray"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/cl_settings_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_settings_header" />

</androidx.constraintlayout.widget.ConstraintLayout>